Fixing overflow problem on created view

--- a/app/stylesheets/framed.scss
+++ b/app/stylesheets/framed.scss
@@ -158,6 +158,8 @@ h2.edits{
   background-color: white;
   padding: 10px;
   margin: 10px;
+  max-height: 300px;
+  overflow: auto;
 }
 table.edits{
   margin: 0;
